--- a/clone/css/style.css
+++ b/clone/css/style.css
@@ -15,6 +15,17 @@
   top: 10px;
   right: 14px;
 }
+#movie {
+  background-color: #f8f8f8;
+}
+#event {
+}
+
+#opening {
+  margin: 17px 0;
+  background: url(../img/bg01.jpg) no-repeat center top;
+  background-size: cover;
+}
 
 /* 가운데 영역 */
 .container {
@@ -317,7 +328,6 @@
 }
 .movie_chart {
   overflow: hidden;
-
 }
 .movie_chart > div > div {
 }
@@ -416,6 +426,236 @@
 .movie_chart > div > div > div .infor .infor_btn a:last-child {
   margin-right: 0;
 }
+/* event */
+.event {
+  overflow: hidden;
+  padding: 100px 0;
+}
+.event img {
+  display: block;
+}
+.event h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.event .event_left {
+  float: left;
+  width: 66%;
+  margin-right: 2%;
+  overflow: hidden;
+}
+.event .event_left .event_box1 {
+  float: left;
+  width: 50%;
+}
+.event .event_left .event_box2 {
+  float: left;
+  width: 50%;
+}
+.event .event_left .event_box3 {
+}
+.event .event_right {
+  float: left;
+  width: 32%;
+}
+
+/* opening */
+.opening {
+  padding: 100px 0;
+  text-align: center;
+  color: #bb9b51;
+}
+.opening h2 {
+  margin-bottom: 15px;
+}
+
+.opening h2 .grand {
+  background-position: 0 -175px;
+  display: inline-block;
+  width: 330px;
+  height: 50px;
+}
+.opening .date {
+  background-position: 0 -225px;
+  display: inline-block;
+  width: 260px;
+  height: 45px;
+}
+.opening .desc {
+  font-size: 35px;
+  font-weight: 300;
+  padding-bottom: 20px;
+  background: url(../img/bar.png) no-repeat bottom center;
+  background-size: 100%;
+}
+
+.opening .open_box {
+  overflow: hidden;
+  padding: 2% 3% 0 3%;
+}
+.opening .open_box > div {
+  float: left;
+  width: 27.333%;
+  margin: 4% 3% 0 3%;
+  border: 1px solid #3e4b44;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.opening .open_box > div h3 {
+  color: #fff;
+  border: 1px solid #6e3abb;
+  margin-top: -24px;
+  font-size: 19px;
+  display: inline-block;
+  padding: 10px 20px;
+  background: #551e9b;
+  font-weight: 300;
+}
+.opening .open_box > div p {
+  font-size: 23px;
+  color: #fff;
+  font-weight: 700;
+  padding: 6% 0 10% 0;
+}
+.opening .open_box > div em {
+  display: block;
+  font-weight: bold;
+}
+.opening .open_box > div strong {
+  display: block;
+  font-weight: bold;
+}
+/* new */
+.new {
+  padding: 100px 0;
+  position: relative;
+}
+.new h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.new_left {
+  height: 500px;
+  margin-right: 423px;
+  background: #ccc url(../img/new01.jpg) center;
+  background-size: cover;
+  position: relative;
+}
+.new_left .play {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 120px;
+  height: 120px;
+  transform: translate(-50%, -50%);
+}
+.new_left .play .st0 {
+  fill: #fff;
+  opacity: 0.3;
+}
+.new_left .play .st1 {
+  fill: #fff;
+}
+.new .new_right {
+  position: absolute;
+  right: 0;
+  top: 165px;
+  width: 400px;
+  height: 500px;
+  padding: 34px;
+  box-sizing: border-box;
+  background: #f0f0f0;
+}
+.new .new_right .title {
+  font-size: 28px;
+  color: #000;
+}
+.new .new_right .release {
+  font-size: 12px;
+  color: #333;
+}
+.new .new_right .star {
+  padding: 13px 0;
+}
+.new .new_right .star strong {
+  font-size: 15px;
+  padding-left: 5px;
+}
+.new .new_right .star span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  vertical-align: -3px;
+}
+.new .new_right .star .star1 {
+  background-position: -393px 0;
+}
+.new .new_right .star .star2 {
+  background-position: -412px 0;
+}
+.new .new_right .star .star0 {
+  background-position: -374px 0;
+}
+.new .new_right .summary {
+  font-size: 14px;
+}
+.new .new_right .genre {
+  padding-bottom: 3px;
+}
+.new .new_right .age {
+  padding-bottom: 10px;
+}
+.new .new_right .desc {
+  margin-bottom: 20px;
+  height: 108px;
+  overflow: hidden;
+}
+
+.new .new_right .select {
+  overflow: hidden;
+}
+.new .new_right .select .s1 {
+  float: left;
+  width: 49%;
+  background: #000;
+  margin-right: 2%;
+}
+.new .new_right .select .s2 {
+  float: left;
+  width: 49%;
+  background: #000;
+}
+.new .new_right .select .s3 {
+  float: left;
+  width: 100%;
+  margin-top: 2%;
+}
+.new .new_right .btn {
+  overflow: hidden;
+  margin-top: 2%;
+  text-align: center;
+}
+.new .new_right .btn a {
+  float: left;
+  width: 49%;
+  box-sizing: border-box;
+  display: block;
+  padding: 10px 30px 12px 30px;
+}
+.new .new_right .btn a.white {
+  background-color: #fff;
+  margin-right: 2%;
+  color: #3a0e6a;
+  border: 1px solid #3a0e6a;
+}
+.new .new_right .btn a.purple {
+  background-color: #3a0e6a;
+  color: #fff;
+  border: 1px solid #6e40c4;
+}
 
 /* media */
 @media (max-width: 1290px) {
@@ -494,6 +734,16 @@
     font-size: 16px;
     padding-top: 35px;
   }
+  .opening {
+    padding: 50px 0;
+  }
+  .opening .open_box {
+    display: none;
+  }
+  .opening .desc {
+    font-size: 25px;
+    background: none;
+  }
 }
 
 @media (max-width: 768px) {
@@ -503,9 +753,12 @@
   .row {
     padding: 0 16px;
   }
+  #movie {
+    background: none;
+  }
   #movie .row {
     background: #fff;
-    margin: 24px;
+    margin: 24px 24px 0 24px;
     padding: 24px;
   }
   #mNav {
@@ -573,10 +826,31 @@
   .movie_title li.active a {
     background: none;
     color: #666;
+  }
+  #event .row {
+    padding: 24px;
+  }
+  .event {
+    padding: 24px;
+    background: #fff;
+  }
+  .event h2 {
+    font-size: 24px;
+    font-weight: 700;
+  }
+  .event .event_left {
+    width: 100%;
+    margin-right: 0;
+  }
+  .event .event_right {
+    display: none;
+  }
+  #opening {
+    margin: 0;
+  }
 }
 
 @media (max-width: 600px) {
-
   .slider {
     height: 400px;
   }
@@ -617,83 +891,128 @@
     width: 13px !important;
     height: 13px !important;
   }
-
-
-  #movie .container{
-
+  #movie .container {
   }
-   #movie .container:after{
-   content: '';
-position: absolute;z-index: 20;top: 0;right: 0;width: 8px;height: 100%;
-background: #d9d7e0; 
+  #movie .container:after {
+    content: "";
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    right: 0;
+    width: 8px;
+    height: 100%;
+    background: #d9d7e0;
   }
   #movie .row {
     position: relative;
-   margin: 8px;padding: 16px;
-   margin-right: 0;padding-right: 0;
+    margin: 8px;
+    padding: 16px;
+    margin-right: 0;
+    padding-right: 0;
   }
-    #movie .row::after{
-      content: '';
-      position: absolute;top: 0;right: 0;z-index: 10;width: 24px;height: 100%;background-color: #fff;
-    }
-  #movie .ir_so{
-   font-size: 18px;
-   padding-bottom: 10px;
+  #movie .row::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    width: 24px;
+    height: 100%;
+    background-color: #fff;
   }
- .movie_title {
-  margin-bottom: 20px;
-}
-.movie_title ul{
-  padding-bottom: 8px; 
-        white-space: nowrap;
-  overflow-x: auto; 
+  #movie .ir_so {
+    font-size: 18px;
+    padding-bottom: 10px;
+  }
+  .movie_title {
+    margin-bottom: 20px;
+  }
+  .movie_title ul {
+    padding-bottom: 8px;
+    white-space: nowrap;
+    overflow-x: auto;
+  }
 
-}
+  .movie_title li a {
+    font-size: 14px;
+    margin-right: 15px;
+  }
+  .movie_title li:active a:before {
+    bottom: -8px;
+  }
+  .movie_chart {
+    position: relative;
+    z-index: 30;
+  }
+  .movie_chart > div > div > div .infor {
+    padding: 5px;
+  }
+  .movie_chart > div > div > div .infor h3 {
+    margin: 5px 0 10px;
+    text-align: center;
+  }
+  .movie_chart > div > div > div .infor h3 strong {
+    display: block;
+    font-size: 19px;
+    color: #222;
+    font-weight: 300;
+  }
+  .movie_chart > div > div > div .infor h3 span {
+    display: none;
+  }
+  .movie_chart > div > div > div .infor_btn a {
+    width: 52%;
+    margin-left: 24%;
+    display: block;
+    margin-right: 0;
+    padding: 5px;
+    color: #777;
+    margin-bottom: 5px;
+    box-sizing: border-box;
+    font-size: 14px;
+    background: none;
+    border: 1px solid #ddd;
+  }
+  .movie_chart > div > div > div .infor_btn a:last-child {
+    display: none;
+  }
+  #event .row {
+    padding: 0 8px;
+  }
+  .event {
+    padding: 16px;
+  }
+  .event h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
 
- .movie_title li a {
-  font-size: 14px;
-  margin-right: 15px;
- }
- .movie_title li:active a:before{
-  bottom: -8px;
-  
- }
- .movie_chart{
-position: relative;
-z-index: 30;
- }
-.movie_chart > div > div > div .infor{
-  padding: 5px;
-}
-.movie_chart > div > div > div .infor h3{
-margin: 5px 0 10px;
-  text-align: center;
-}
-.movie_chart > div > div > div .infor h3 strong{
-  display: block;
-  font-size: 19px;
-color: #222;
-font-weight: 300;
-}
-.movie_chart > div > div > div .infor h3 span{
-  display: none;
-}
-.movie_chart > div > div > div .infor_btn a{
-width: 52%;margin-left: 24%;display: block;
-margin-right: 0;padding: 5px;color: #777;
-margin-bottom: 5px;box-sizing: border-box;
-font-size: 14px;background: none;border: 1px solid#ddd;
-}
-.movie_chart > div > div > div .infor_btn a:last-child{
-display: none;
-}
-
+  #opening {
+    margin: 8px 0;
+  }
+  .opening {
+    padding: 20px 0;
+  }
+  .opening h2 .grand {
+    background-size: 300px;
+    background-position: 0 -105px;
+    width: 197px;
+    height: 24px;
+  }
+  .opening .date {
+    display: none;
+  }
+  .opening .desc {
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 0;
+  }
 }
 
 @media (max-width: 480px) {
 }
 @media (max-width: 320px) {
-  .movie_title li a{
+  .movie_title li a {
     margin-right: 9px;
   }
 }
