--- a/clone/css/style.css
+++ b/clone/css/style.css
@@ -15,11 +15,12 @@
   top: 10px;
   right: 14px;
 }
+
 #movie {
   background-color: #f8f8f8;
 }
-#event {
-}
+
+#event {}
 
 #opening {
   margin: 17px 0;
@@ -76,8 +77,7 @@
 }
 
 /* header */
-.header {
-}
+.header {}
 
 .header h1 {
   float: left;
@@ -262,8 +262,7 @@
   background-size: cover;
 }
 
-.slider .swiper-slide {
-}
+.slider .swiper-slide {}
 
 .slider .swiper-slide h2 {
   font-size: 62px;
@@ -300,14 +299,17 @@
 .movie {
   padding: 100px 0;
 }
+
 .movie_title {
   margin-bottom: 60px;
 }
+
 .movie_title ul {
   overflow: hidden;
   width: 848px;
   margin: 0 auto;
 }
+
 .movie_title li {
   float: left;
   width: 210px;
@@ -315,6 +317,7 @@
   border: 1px solid #c4c4c4;
   margin-right: -1px;
 }
+
 .movie_title li a {
   display: block;
   padding: 15px 0;
@@ -322,31 +325,38 @@
   color: #666;
   font-weight: 700;
 }
+
 .movie_title li.active a {
   background: #666;
   color: #fff;
 }
+
 .movie_chart {
   overflow: hidden;
 }
-.movie_chart > div > div {
-}
-.movie_chart > div > div > div {
+
+.movie_chart>div>div {}
+
+.movie_chart>div>div>div {
   float: left;
   width: 292px;
   height: 592px;
   margin-right: 18px;
 }
-.movie_chart > div > div > div :last-child {
+
+.movie_chart>div>div>div :last-child {
   margin-right: 0;
 }
-.movie_chart > div > div > div .poster {
+
+.movie_chart>div>div>div .poster {
   position: relative;
 }
-.movie_chart > div > div > div .poster img {
+
+.movie_chart>div>div>div .poster img {
   display: block;
 }
-.movie_chart > div > div > div .poster .rank {
+
+.movie_chart>div>div>div .poster .rank {
   position: absolute;
   top: 17px;
   left: 0;
@@ -358,62 +368,76 @@
   background-color: #38116a;
   text-align: center;
 }
-.movie_chart > div > div > div .poster .rank strong {
+
+.movie_chart>div>div>div .poster .rank strong {
   color: #fff;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
 }
-.movie_chart > div > div > div .poster .mx {
+
+.movie_chart>div>div>div .poster .mx {
   position: absolute;
   top: 17px;
   right: 17px;
 }
-.movie_chart > div > div > div .poster .mx span {
+
+.movie_chart>div>div>div .poster .mx span {
   width: 103px;
   height: 25px;
   display: block;
 }
-.movie_chart > div > div > div .poster .mx .m {
+
+.movie_chart>div>div>div .poster .mx .m {
   background-position: 0 -75px;
 }
-.movie_chart > div > div > div .poster .mx .b {
+
+.movie_chart>div>div>div .poster .mx .b {
   background-position: 0 -100px;
 }
-.movie_chart > div > div > div .infor {
+
+.movie_chart>div>div>div .infor {
   background: #fff;
   padding: 17px;
   border: 1px solid #d9d9d9;
 }
-.movie_chart > div > div > div .infor h3 {
+
+.movie_chart>div>div>div .infor h3 {
   color: #333;
   font-size: 30px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-.movie_chart > div > div > div .infor h3 strong {
-}
-.movie_chart > div > div > div .infor h3 span {
+
+.movie_chart>div>div>div .infor h3 strong {}
+
+.movie_chart>div>div>div .infor h3 span {
   width: 29px;
   height: 29px;
   display: inline-block;
   margin-top: 9px;
   vertical-align: -2px;
 }
-.movie_chart > div > div > div .infor h3 span.all {
+
+.movie_chart>div>div>div .infor h3 span.all {
   background-position: -87px -125px;
 }
-.movie_chart > div > div > div .infor h3 span.a12 {
+
+.movie_chart>div>div>div .infor h3 span.a12 {
   background-position: -58px -125px;
 }
-.movie_chart > div > div > div .infor h3 span.a15 {
+
+.movie_chart>div>div>div .infor h3 span.a15 {
   background-position: 0px -125px;
 }
-.movie_chart > div > div > div .infor h3 span.a19 {
+
+.movie_chart>div>div>div .infor h3 span.a19 {
   background-position: -29px -125px;
 }
-.movie_chart > div > div > div .infor .infor_btn {
+
+.movie_chart>div>div>div .infor .infor_btn {
   overflow: hidden;
 }
-.movie_chart > div > div > div .infor .infor_btn a {
+
+.movie_chart>div>div>div .infor .infor_btn a {
   float: left;
   width: 49%;
   margin-right: 2%;
@@ -423,38 +447,46 @@
   padding: 15px;
   box-sizing: border-box;
 }
-.movie_chart > div > div > div .infor .infor_btn a:last-child {
+
+.movie_chart>div>div>div .infor .infor_btn a:last-child {
   margin-right: 0;
 }
+
 /* event */
 .event {
   overflow: hidden;
   padding: 100px 0;
 }
+
 .event img {
   display: block;
 }
+
 .event h2 {
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 20px;
 }
+
 .event .event_left {
   float: left;
   width: 66%;
   margin-right: 2%;
   overflow: hidden;
 }
+
 .event .event_left .event_box1 {
   float: left;
   width: 50%;
 }
+
 .event .event_left .event_box2 {
   float: left;
   width: 50%;
 }
-.event .event_left .event_box3 {
-}
+
+.event .event_left .event_box3 {}
+
 .event .event_right {
   float: left;
   width: 32%;
@@ -466,6 +498,7 @@
   text-align: center;
   color: #bb9b51;
 }
+
 .opening h2 {
   margin-bottom: 15px;
 }
@@ -476,12 +509,14 @@
   width: 330px;
   height: 50px;
 }
+
 .opening .date {
   background-position: 0 -225px;
   display: inline-block;
   width: 260px;
   height: 45px;
 }
+
 .opening .desc {
   font-size: 35px;
   font-weight: 300;
@@ -494,7 +529,8 @@
   overflow: hidden;
   padding: 2% 3% 0 3%;
 }
-.opening .open_box > div {
+
+.opening .open_box>div {
   float: left;
   width: 27.333%;
   margin: 4% 3% 0 3%;
@@ -503,7 +539,7 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
-.opening .open_box > div h3 {
+.opening .open_box>div h3 {
   color: #fff;
   border: 1px solid #6e3abb;
   margin-top: -24px;
@@ -513,38 +549,45 @@
   background: #551e9b;
   font-weight: 300;
 }
-.opening .open_box > div p {
+
+.opening .open_box>div p {
   font-size: 23px;
   color: #fff;
   font-weight: 700;
   padding: 6% 0 10% 0;
 }
-.opening .open_box > div em {
+
+.opening .open_box>div em {
   display: block;
   font-weight: bold;
 }
-.opening .open_box > div strong {
+
+.opening .open_box>div strong {
   display: block;
   font-weight: bold;
 }
+
 /* new */
 .new {
   padding: 100px 0;
   position: relative;
 }
+
 .new h2 {
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 20px;
 }
-.new_left {
+
+.new .new_left {
   height: 500px;
   margin-right: 423px;
   background: #ccc url(../img/new01.jpg) center;
   background-size: cover;
   position: relative;
 }
-.new_left .play {
+
+.new .new_left .play {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -552,13 +595,16 @@
   height: 120px;
   transform: translate(-50%, -50%);
 }
-.new_left .play .st0 {
+
+.new .new_left .play .st0 {
   fill: #fff;
   opacity: 0.3;
 }
-.new_left .play .st1 {
+
+.new .new_left .play .st1 {
   fill: #fff;
 }
+
 .new .new_right {
   position: absolute;
   right: 0;
@@ -569,45 +615,57 @@
   box-sizing: border-box;
   background: #f0f0f0;
 }
+
 .new .new_right .title {
   font-size: 28px;
   color: #000;
 }
+
 .new .new_right .release {
   font-size: 12px;
   color: #333;
 }
+
 .new .new_right .star {
   padding: 13px 0;
 }
+
 .new .new_right .star strong {
   font-size: 15px;
   padding-left: 5px;
 }
+
 .new .new_right .star span {
   display: inline-block;
   width: 20px;
   height: 20px;
   vertical-align: -3px;
 }
+
 .new .new_right .star .star1 {
   background-position: -393px 0;
 }
+
 .new .new_right .star .star2 {
   background-position: -412px 0;
 }
+
 .new .new_right .star .star0 {
   background-position: -374px 0;
 }
+
 .new .new_right .summary {
   font-size: 14px;
 }
+
 .new .new_right .genre {
   padding-bottom: 3px;
 }
+
 .new .new_right .age {
   padding-bottom: 10px;
 }
+
 .new .new_right .desc {
   margin-bottom: 20px;
   height: 108px;
@@ -617,27 +675,32 @@
 .new .new_right .select {
   overflow: hidden;
 }
+
 .new .new_right .select .s1 {
   float: left;
   width: 49%;
   background: #000;
   margin-right: 2%;
 }
+
 .new .new_right .select .s2 {
   float: left;
   width: 49%;
   background: #000;
 }
+
 .new .new_right .select .s3 {
   float: left;
   width: 100%;
   margin-top: 2%;
 }
+
 .new .new_right .btn {
   overflow: hidden;
   margin-top: 2%;
   text-align: center;
 }
+
 .new .new_right .btn a {
   float: left;
   width: 49%;
@@ -645,33 +708,235 @@
   display: block;
   padding: 10px 30px 12px 30px;
 }
+
 .new .new_right .btn a.white {
   background-color: #fff;
   margin-right: 2%;
   color: #3a0e6a;
   border: 1px solid #3a0e6a;
 }
+
 .new .new_right .btn a.purple {
   background-color: #3a0e6a;
   color: #fff;
   border: 1px solid #6e40c4;
 }
 
+/*help */
+.help {
+  overflow: hidden;
+  padding-bottom: 200px;
+}
+
+.help article {
+  float: left;
+  width: 32%;
+  margin-right: 2%;
+  height: 350px;
+}
+
+.help article>div {
+  border: 1px solid #dbdbdb;
+  height: 350px;
+}
+
+.help article.help_box3 {
+  margin-right: 0;
+}
+
+.help article.help_box3>div {
+  border: 0;
+}
+
+.help article h3 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+/* notice */
+.notice {
+  padding: 17px;
+  position: relative;
+}
+
+.notice ul {
+  overflow: hidden;
+}
+
+
+.notice ul li {
+  float: left;
+  text-align: center;
+  margin-right: -1px;
+}
+
+.notice ul li a {
+  border: 1px solid#dbdbdb;
+  font-size: 15px;
+  color: #666;
+  display: block;
+  width: 80px;
+  padding: 10px 20px;
+  background-color: #f5f5f5;
+}
+
+.notice ul li.active a {
+  background: #fff;
+}
+
+.notice ul li ul {
+  position: absolute;
+  left: 17px;
+  top: 70px;
+  width: 90%;
+
+}
+
+.notice ul li ul li {
+  width: 100%;
+  text-align: left;
+  padding: 17px;
+  border-bottom: 1px solid #dbdbdb;
+  box-sizing: border-box;
+}
+
+.notice ul li ul li:last-child {
+  border-bottom: 0;
+}
+
+.notice ul li ul li dt em {
+  color: #999;
+}
+
+.notice ul li ul li dt {}
+
+.notice ul li ul li dt .bar {
+  position: relative;
+  padding-right: 14px;
+}
+
+.notice ul li ul li dt .bar:after {
+  content: '';
+  position: absolute;
+  right: 4px;
+  top: 5px;
+  width: 1px;
+  height: 10px;
+  background: #999;
+}
+
+.notice ul li ul li dd {
+  color: #777;
+  padding-top: 3px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* card */
+.card {
+  padding: 17px;
+}
+
+.card ul {}
+
+.card ul li {
+  position: relative;
+  border: 1px solid #d7d7d7;
+  padding: 17px;
+  margin-bottom: 17px;
+  min-height: 102px;
+  box-sizing: border-box;
+}
+
+.card ul li span {
+  position: absolute;
+  left: 17px;
+  top: 17px;
+}
+
+.card ul li span img {
+  width: 105px;
+}
+
+.card ul li strong {
+  display: block;
+  font-size: 18px;
+  padding-left: 120px;
+  color: #777;
+}
+
+.card ul li em {
+  display: block;
+  font-size: 14px;
+  padding-left: 120px;
+  color: #777;
+  font-weight: 300;
+}
+
+/* 고객센터 */
+.service ul {
+  overflow: hidden;
+}
+
+.service li {
+  float: left;
+  width: 50%;
+  height: 193px;
+  box-sizing: border-box;
+  border: 1px solid #d7d7d7;
+  text-align: center;
+}
+
+.service li a span {
+  display: block;
+  width: 120px;
+  height: 120px;
+  margin: 20px auto 0 auto;
+  overflow: hidden;
+}
+
+.service li a strong {
+  color: #666;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.service li:nth-child(1) {
+  border-right: 0;
+  border-bottom: 0;
+}
+
+.service li:nth-child(2) {
+  border-bottom: 0;
+}
+
+.service li:nth-child(3) {
+  border-right: 0;
+}
+
+
+
 /* media */
 @media (max-width: 1290px) {
   .container {
     width: 100%;
   }
+
   .header .nav ul li {
     width: 93px;
   }
+
   .header .nav ul li a {
     font-size: 15px;
     padding: 17px 10px;
   }
+
   .header h1 em {
     padding: 11px 8px 5px 0;
   }
+
   .header h1 strong {
     top: 19px;
   }
@@ -686,16 +951,20 @@
   #mNav {
     display: block;
   }
+
   .nav {
     display: none;
   }
+
   .row {
     padding: 0 24px;
   }
+
   .header h1 {
     float: none;
     text-align: center;
   }
+
   .header h1 strong {
     left: 24px;
   }
@@ -703,8 +972,24 @@
   .banner_menu .bm_left ul {
     display: none;
   }
+
   .banner_menu .bm_right ul:first-child {
     display: none;
+  }
+
+  .help .article.help_box1 {
+    width: 49%;
+    margin-right: 2%;
+  }
+
+  .help .article.help_box2 {
+    width: 49%;
+    margin-right: 0;
+  }
+
+  .help .article.help_box3 {
+    width: 100%;
+    margin-top: 2%;
   }
 }
 
@@ -712,64 +997,95 @@
   .movie_title ul {
     width: auto;
   }
+
   .movie_title li {
     width: 25%;
     box-sizing: border-box;
   }
+
   .slider {
     height: 500px;
   }
+
   .slider .swiper-slide h2 {
     margin-top: 170px;
     font-size: 37px;
     line-height: 45px;
   }
+
   .slider .swiper-slide h2:after {
     bottom: -15px;
   }
+
   .slider .swiper-slide h2 em {
     font-size: 34px;
   }
+
   .slider .swiper-slide p {
     font-size: 16px;
     padding-top: 35px;
   }
+
   .opening {
     padding: 50px 0;
   }
+
   .opening .open_box {
     display: none;
   }
+
   .opening .desc {
     font-size: 25px;
     background: none;
   }
+
+  .new .new_right {
+    position: relative;
+    top: 0;
+    width: 100%;
+    height: auto;
+  }
+
+  .new .new_left {
+    margin-right: 0;
+    height: 400px;
+  }
+
+
+
 }
 
 @media (max-width: 768px) {
   body {
     background: #d9d7e0;
   }
+
   .row {
     padding: 0 16px;
   }
+
   #movie {
     background: none;
   }
+
   #movie .row {
     background: #fff;
     margin: 24px 24px 0 24px;
     padding: 24px;
   }
+
   #mNav {
     right: 6px;
   }
+
   .header h1 {
     text-align: left;
   }
+
   .header h1 strong {
     display: none;
   }
+
   #movie .ir_so {
     position: static;
     width: auto;
@@ -780,16 +1096,20 @@
     font-weight: bold;
     padding-bottom: 20px;
   }
+
   .movie {
     padding: 0;
   }
+
   .movie_title {
     margin-bottom: 30px;
   }
+
   .movie_title ul {
     position: relative;
     padding-bottom: 10px;
   }
+
   .movie_title ul:before {
     content: "";
     position: absolute;
@@ -800,6 +1120,7 @@
     height: 2px;
     background: #e1e1e1;
   }
+
   .movie_title li {
     width: auto;
     border: 0;
@@ -813,6 +1134,7 @@
     padding: 0;
     margin-right: 35px;
   }
+
   .movie_title li.active a:before {
     content: "";
     position: absolute;
@@ -823,30 +1145,60 @@
     height: 2px;
     background: #666;
   }
+
   .movie_title li.active a {
     background: none;
     color: #666;
   }
+
   #event .row {
     padding: 24px;
   }
+
   .event {
     padding: 24px;
     background: #fff;
   }
+
   .event h2 {
     font-size: 24px;
     font-weight: 700;
   }
+
   .event .event_left {
     width: 100%;
     margin-right: 0;
   }
+
   .event .event_right {
     display: none;
   }
+
   #opening {
     margin: 0;
+  }
+
+  #new .row {
+    padding: 0 24px;
+  }
+
+  .new {
+    background-color: #fff;
+    padding: 24px;
+    margin-top: 24px;
+
+  }
+
+  .new h2 {
+    font-size: 24px;
+    font-weight: 700;
+    height: 27px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+  }
+
+  .new .new_right {
+    padding: 24px;
   }
 }
 
@@ -854,17 +1206,21 @@
   .slider {
     height: 400px;
   }
+
   .slider .swiper-slide h2 {
     margin-top: 140px;
     font-size: 24px;
     line-height: 30px;
   }
+
   .slider .swiper-slide h2:after {
     bottom: -5px;
   }
+
   .slider .swiper-slide h2 em {
     font-size: 20px;
   }
+
   .slider .swiper-slide p {
     font-size: 14px;
     padding-top: 25px;
@@ -873,6 +1229,7 @@
   .banner_menu {
     top: 16px;
   }
+
   .banner_menu .bm_right li.white a {
     font-size: 14px;
     padding: 3px 5px 5px 5px;
@@ -880,6 +1237,7 @@
     background: rgba(0, 0, 0, 0.6);
     border-color: #fff;
   }
+
   .banner_menu .bm_right li.purple a {
     font-size: 14px;
     padding: 3px 5px 5px 5px;
@@ -887,12 +1245,14 @@
     background: rgba(0, 0, 0, 0.6);
     border-color: #fff;
   }
+
   .swiper-pagination-bullet {
     width: 13px !important;
     height: 13px !important;
   }
-  #movie .container {
-  }
+
+  #movie .container {}
+
   #movie .container:after {
     content: "";
     position: absolute;
@@ -903,6 +1263,7 @@
     height: 100%;
     background: #d9d7e0;
   }
+
   #movie .row {
     position: relative;
     margin: 8px;
@@ -910,6 +1271,7 @@
     margin-right: 0;
     padding-right: 0;
   }
+
   #movie .row::after {
     content: "";
     position: absolute;
@@ -920,13 +1282,16 @@
     height: 100%;
     background-color: #fff;
   }
+
   #movie .ir_so {
     font-size: 18px;
     padding-bottom: 10px;
   }
+
   .movie_title {
     margin-bottom: 20px;
   }
+
   .movie_title ul {
     padding-bottom: 8px;
     white-space: nowrap;
@@ -937,30 +1302,37 @@
     font-size: 14px;
     margin-right: 15px;
   }
+
   .movie_title li:active a:before {
     bottom: -8px;
   }
+
   .movie_chart {
     position: relative;
     z-index: 30;
   }
-  .movie_chart > div > div > div .infor {
+
+  .movie_chart>div>div>div .infor {
     padding: 5px;
   }
-  .movie_chart > div > div > div .infor h3 {
+
+  .movie_chart>div>div>div .infor h3 {
     margin: 5px 0 10px;
     text-align: center;
   }
-  .movie_chart > div > div > div .infor h3 strong {
+
+  .movie_chart>div>div>div .infor h3 strong {
     display: block;
     font-size: 19px;
     color: #222;
     font-weight: 300;
   }
-  .movie_chart > div > div > div .infor h3 span {
+
+  .movie_chart>div>div>div .infor h3 span {
     display: none;
   }
-  .movie_chart > div > div > div .infor_btn a {
+
+  .movie_chart>div>div>div .infor_btn a {
     width: 52%;
     margin-left: 24%;
     display: block;
@@ -973,15 +1345,19 @@
     background: none;
     border: 1px solid #ddd;
   }
-  .movie_chart > div > div > div .infor_btn a:last-child {
+
+  .movie_chart>div>div>div .infor_btn a:last-child {
     display: none;
   }
+
   #event .row {
     padding: 0 8px;
   }
+
   .event {
     padding: 16px;
   }
+
   .event h2 {
     font-size: 18px;
     margin-bottom: 10px;
@@ -990,27 +1366,71 @@
   #opening {
     margin: 8px 0;
   }
+
   .opening {
     padding: 20px 0;
   }
+
   .opening h2 .grand {
     background-size: 300px;
     background-position: 0 -105px;
     width: 197px;
     height: 24px;
   }
+
   .opening .date {
     display: none;
   }
+
   .opening .desc {
     font-size: 16px;
     font-weight: 400;
     padding-bottom: 0;
   }
+
+  #new .row {
+    padding: 0 8px;
+  }
+
+  .new {
+    padding: 16px;
+    margin-top: 8px;
+  }
+
+  .new h2 {
+    font-size: 18px;
+    margin-bottom: 0;
+  }
+
+  .new .new_left {
+    height: 300px;
+  }
+
+  .new.new_right {
+    padding: 17px;
+  }
+
+  .new.new_right .title {
+    font-size: 22px;
+  }
+
+  .new.new_right .star {
+    padding: 9px 0;
+  }
+
+  .new .new_right .select .s1 {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 2%;
+  }
+
+  .new .new_right .select .s2 {
+    width: 100%;
+  }
 }
 
-@media (max-width: 480px) {
-}
+@media (max-width: 480px) {}
+
 @media (max-width: 320px) {
   .movie_title li a {
     margin-right: 9px;
