--- a/clone/css/style.css
+++ b/clone/css/style.css
@@ -1,3 +1,30 @@
+@charset "utf-8";
+
+/* 스킵메뉴 */
+#skip {
+  position: relative;
+}
+
+#skip a {
+  position: absolute;
+  left: 0;
+  top: -40px;
+  width: 140px;
+  line-height: 30px;
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  background: #333;
+}
+
+#skip a:active,
+#skip a:focus {
+  top: 0;
+
+}
+
+
+
 /* layout */
 #header {
   width: 100%;
@@ -777,6 +804,7 @@
   margin-right: -1px;
 }
 
+
 .notice ul li a {
   border: 1px solid #dbdbdb;
   font-size: 15px;
@@ -810,6 +838,8 @@
   border-bottom: 0;
 }
 
+
+
 .notice ul li ul li dt em {
   color: #999;
 }
@@ -832,6 +862,13 @@
 .notice ul li ul li dd {
   color: #777;
   padding-top: 3px;
+
+}
+
+.notice ul li ul li a {
+  border: 0;
+  padding: 0;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -928,6 +965,8 @@
 
 .footer_sns li {
   display: inline-block;
+  margin: 0 2px;
+  margin-bottom: 15px;
 
 }
 
@@ -935,6 +974,7 @@
   display: block;
   width: 36px;
   height: 36px;
+
 }
 
 .footer_sns li.s1 {
@@ -991,6 +1031,9 @@
   color: #fff;
 }
 
+
+
+
 .footer_info {
   padding: 50px 0;
 }
@@ -1035,6 +1078,44 @@
   color: #8f8f8f;
   padding-bottom: 15px;
 }
+
+/* 트레일러 */
+.overlay {
+  background: rgba(0, 0, 0, 0.92);
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000
+}
+
+.modal {
+  position: absolute;
+}
+
+.modal_close {
+  background: url(../img/close.svg) no-repeat;
+  background-size: 32px 32px;
+  border: 0;
+  color: transparent;
+  display: block;
+  width: 32px;
+  height: 32px;
+  overflow: hidden;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  text-indent: 100%;
+}
+
+body.modal_on {
+  overflow: hidden;
+}
+
+
+
 
 /* media */
 @media (max-width: 1290px) {
@@ -1193,6 +1274,25 @@
     height: 400px;
   }
 
+  .help {
+    padding-bottom: 0;
+  }
+
+  .footer_sns {
+    position: static;
+    text-align: center;
+    background: #352c2c;
+
+  }
+
+  .footer_sns .tel {
+    display: none;
+  }
+
+  .footer_info {
+    width: 100%;
+    text-align: center;
+  }
 
 
 }
@@ -1345,6 +1445,7 @@
 
   #help .row {
     padding: 0 24px;
+    padding-bottom: 24px;
 
   }
 
@@ -1631,6 +1732,7 @@
 
   #help .row {
     padding: 0 8px;
+    padding-bottom: 8px;
 
   }
 
